--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start-dev": "cross-env NODE_ENV=development node index.js",
+    "start-dev-atlas": "cross-env NODE_ENV=development-atlas node index.js",
     "start-prod": "cross-env NODE_ENV=production node index.js",
     "test": "jest"
   },
